--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -9,7 +9,7 @@
   
   </form>
   <footer>
-    <a href="/api/sessions/logout" role="button">Logout</a>
+    {{!-- <a href="/api/sessions/logout" role="button">Logout</a> --}}
   </footer>
 </article>
 
