--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -9,35 +9,38 @@
  <!-- Formulario para Identificación -->
 <!-- Formulario para Identificación -->
 <!-- Formulario para Identificación -->
-<form action="/api/users/{{user.id}}/documents" method="post" enctype="multipart/form-data">
-  <label for="identificacion">Identificacion:</label>
-  <input type="file" name="documentsID" multiple>
+<form action="/api/users/{{user.id}}/documents/Id" method="post" enctype="multipart/form-data">
+  <label for="documentsID">Identificacion:</label>
+  <input type="file" name="documentsID">
+
+  <input type="hidden" name="documentType" value="address">
+
   <input type="submit" value="Upload">
 </form>
 
 <!-- Formulario para Domicilio -->
 <form action="/api/users/{{user.id}}/documents" method="post" enctype="multipart/form-data">
   <label for="domicilio">domicilio:</label>
-  <input type="file" name="documentsID" multiple>
+  <input type="file" name="documentsID">
   <input type="submit" value="Upload">
 </form>
 {{!-- <form action="/api/users/{{user.id}}/documents" method="post" enctype="multipart/form-data">
   <label for="domicilio">domicilio:</label>
-  <input type="file" name="documentsDomicilio" multiple>
+  <input type="file" name="documentsDomicilio">
   <input type="submit" value="Upload">
 </form> --}}
 
 <!-- Formulario para Estado de cuenta -->
 <form action="/api/users/{{user.id}}/documents" method="post" enctype="multipart/form-data">
   <label for="estadoDeCuenta">Estado de cuenta:</label>
-  <input type="file" name="documentsEstadoCuenta" multiple>
+  <input type="file" name="documentsEstadoCuenta">
   <input type="submit" value="Upload">
 </form>
 
 <!-- Formulario para Avatar -->
 <form action="/api/users/{{user.id}}/documents" method="post" enctype="multipart/form-data">
   <label for="avatar">Avatar:</label>
-  <input type="file" name="avatar" multiple>
+  <input type="file" name="avatar">
   <input type="submit" value="Upload">
 </form>
 
