--- a/src/views/users.handlebars
+++ b/src/views/users.handlebars
@@ -6,7 +6,10 @@
   <p>Nombre: {{this.user.firstName}}</p>
   <p>Apellido: {{this.user.lastName}}</p>
   <p>Correo: {{this.user.email}}</p>
-
+  <footer>
+    <button id="btnVolver">Vovler</button>
+  </div>
+  </footer>
 </article>
 
 <h1>Usuarios</h1>
