fix: loggin handlebars

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <form action="/auth/login" method="post">
+  {{!-- <form action="/auth/login" method="post"> --}}
     <header>
       <h1>Login</h1>
     </header>
@@ -12,7 +12,7 @@
       <input type="submit" value="Enviar" id="btnLogin">
       {{!-- <a href="/api/sessions/github" role="button">Ingresar con Github</a> --}}
     </footer>
-  </form>
+  {{!-- </form> --}}
 </article>
 
 <script src="/js/login.js"></script>
