fix: users handlebars

--- a/src/views/users.handlebars
+++ b/src/views/users.handlebars
@@ -7,7 +7,7 @@
   <p>Apellido: {{this.user.lastName}}</p>
   <p>Correo: {{this.user.email}}</p>
   <footer>
-    <button id="btnVolver">Vovler</button>
+    <button id="btnVolver">Volver</button>
   </div>
   </footer>
 </article>
