--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 <article>
   {{!-- <form action="/auth/login" method="post"> --}}
     <header>
-      <h1>Login</h1>
+      <h1>Login de Usuarios</h1>
     </header>
     <input type="email" name="email" placeholder="Correo" id="mail"  required />
     <input type="password" name="password" id="pass"  placeholder="Contraseña" required />
