--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -16,7 +16,7 @@
 {{!-- <article> --}}
 
   {{#ifCond this.user.rol '!==' 'admin'}}
-<h1>Carrito</h1>
+{{!-- <h1>Carrito</h1> --}}
 <div>
   <div class="cart">
     {{!-- <h3>Carrito</h3> --}}
@@ -34,7 +34,7 @@
         <li>No hay productos en el carrito.</li>
       {{/if}}
     </ul> --}}
-  <button id="btnComprarCarrito" value={{cartId}}>Checkout</button>
+  <button id="btnComprarCarrito" value={{cartId}}>Ver Carrito 🛒</button>
   </div>
 </div>
 
@@ -49,15 +49,15 @@
 <table id="main" role="grid">
 <tr>
     <th>ID</th>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Code</th>
-    <th>Price</th>
+    <th>Nombre</th>
+    <th>Descripción</th>
+    <th>Código</th>
+    <th>Precio</th>
     <th>Stock</th>
-    <th>Category</th>
-    <th>Quantity</th>
-    <th>ADD</th>
-    <th>IMAGES</th>
+    <th>Categoria</th>
+    <th>Cantidad</th>
+    <th>Agregar</th>
+    <th>Imágenes</th>
   </tr>
   {{#each payload}}
   <tr>
@@ -69,7 +69,7 @@
     <td>{{this.stock}}</td>
     <td>{{this.category}}</td>
     <td><input type="number" id={{this._id}} style="width: 80px;" required min="1"></td>
-    <td><button id={{this._id}} class="boton">ADD</button></td>
+    <td><button id={{this._id}} class="boton">➕</button></td>
     <td>
   {{#if this.thumbnails}}
     {{#each this.thumbnails}}
@@ -87,8 +87,8 @@
 
 <p>Página actual: {{page}}</p>
 
-<a href="{{prevLink}}" role="button" {{#unless hasPrevPage}}disabled{{/unless}} >Anterior</a>
-<a href="{{nextLink}}" role="button" {{#unless hasNextPage}}disabled{{/unless}} >Siguiente</a>
+<a href="{{prevLink}}" role="button" {{#unless hasPrevPage}}disabled{{/unless}} >⏪</a>
+<a href="{{nextLink}}" role="button" {{#unless hasNextPage}}disabled{{/unless}} >⏩</a>
 
 <div id="carts">
 </div>
@@ -122,7 +122,7 @@
             
             
             <input type="file" name="thumbnails" multiple>
-            <input type="submit">Create</input>
+            <input type="submit"></input>
 
 
           </form>
@@ -171,9 +171,9 @@
 <div id="log-products-in-real-time">
 </div> --}}
 
-<h1>Tickets</h1>
+{{!-- <h1>Tickets</h1>
 <div style="display: flex; flex-direction: row; justify-content: space-between;">
-</div>
+</div> --}}
 
 
 
