--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,7 +7,7 @@
     <input type="password" name="password" id="pass"  placeholder="Contraseña" required />
     {{!-- <a href="/password-recovery">Recupere su clave</a> o --}}
      <a href="/register">Regístrese</a> 
-    o <a href="/pass-recovery">Recupere su clave</a>
+    o <a href="/pass-recovery">Recupere su contraseña</a>
     <footer>
       <input type="submit" value="Enviar" id="btnLogin">
       {{!-- <a href="/api/sessions/github" role="button">Ingresar con Github</a> --}}
